--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,4 +27,60 @@
     background-color: rgb(44, 229, 44);
     color: rgb(9, 126, 9);
     border: 2px solid rgb(9, 126, 9);
+    padding: 10px;
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 30px;
+
+}
+/*estilização dos icoens*/
+
+.actions-icons{
+    text-align: right;
+    width: 150px;
+}
+.actions-icons i{
+    cursor: pointer;
+    font-size: 20px;
+    margin-right: 3px;
+}
+
+/*estilizando individualmente cada icone*/
+/* Estilização dos ícones */
+.eye-icon {
+    color: green;
+    transition: transform 0.2s ease, color 0.2s ease; /* Adiciona animação */
+}
+
+.eye-icon:hover {
+    color: darkgreen; /* Altera a cor ao passar o mouse */
+    transform: scale(1.2); /* Aumenta o tamanho ao passar o mouse */
+}
+
+.edit-icon {
+    color: blue;
+    transition: transform 0.2s ease, color 0.2s ease; /* Adiciona animação */
+}
+
+.edit-icon:hover {
+    color: darkblue; /* Altera a cor ao passar o mouse */
+    transform: scale(1.2); /* Aumenta o tamanho ao passar o mouse */
+}
+
+
+/* Estilização do botão de deletar */
+.btn-deletar {
+    background-color: transparent; /* Remove o fundo padrão */
+    border: none; /* Remove a borda padrão */
+    color: red; /* Define a cor do texto/ícone */
+    cursor: pointer; /* Define o cursor como pointer */
+    font-size: 20px; /* Ajusta o tamanho do ícone */
+    padding: 5px; /* Adiciona um espaçamento interno */
+    transition: transform 0.2s ease, color 0.2s ease; /* Adiciona animação */
+}
+
+.btn-deletar:hover {
+    color: darkred; /* Altera a cor ao passar o mouse */
+    transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
 }
